# CatchChallenger

./: .gitignore  .travis.yml  CLAUDE.md  README  README.md  THANKS  TODO.md  dev.md  security-problem.txt
benchmark/benchmarkmapmanager/: CMakeLists.txt  main.cpp
client/: .ccls  .qmake.stash  .vimspector.json  .vimspector.session  CLAUDE.md  CMakeLists.txt  README.md  audio.cpp  bundle-android.sh  catchchallenger-2.2.0.0.recipe  catchchallenger-v3.pro  catchchallenger.pro  catchchallengeraudio.pro  dev.md  main.cpp
client/android-sources/: AndroidManifest.xml  build.sh
client/base/: Api_client_real.cpp  Api_client_real.h  Api_client_real_Qt.cpp  Api_client_real_base.cpp  Api_client_real_main.cpp  Api_client_real_sub.cpp  Api_client_virtual.cpp  Api_client_virtual.h  Api_protocol.cpp  Api_protocol.h  Api_protocol_Qt.cpp  Api_protocol_Qt.h  Api_protocol_loadchar.cpp  Api_protocol_message.cpp  Api_protocol_query.cpp  Api_protocol_reply.cpp  Audio.cpp  Audio.h  BlacklistPassword.cpp  BlacklistPassword.h  CCBackground.cpp  CCprogressbar.h  ClientStructures.h  ClientVariable.h  ClientVariableAudio.h  CustomButton.cpp  DatapackChecksum.cpp  DatapackChecksum.h  DatapackClientLoader.cpp  DatapackClientLoader.h  DisplayStructures.h  ExtraSocket.cpp  ExtraSocket.h  FacilityLibClient.cpp  FacilityLibClient.h  FeedNews.cpp  FeedNews.h  InternetUpdater.cpp  InternetUpdater.h  LanguagesSelect.cpp  (+26 more)
client/catchchallenger/: .qmake.stash  AskKey.ui  catchchallenger.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  specific.pri
client/catchchallenger-single-player-build-Desktop-Debug/: Makefile  datapack  metadata.conf  moc_Api_client_real.cpp  moc_Api_client_virtual.cpp  moc_Api_protocol.cpp  moc_BaseServer.cpp  moc_BaseWindow.cpp  moc_BroadCastWithoutSender.cpp  moc_Chat.cpp  moc_Client.cpp  moc_ClientBroadCast.cpp  moc_ClientHeavyLoad.cpp  moc_ClientLocalBroadcast.cpp  moc_ClientMapManagement.cpp  moc_ClientNetworkRead.cpp  moc_ClientNetworkWrite.cpp  moc_ConnectedSocket.cpp  moc_DatapackClientLoader.cpp  moc_EventThreader.cpp  moc_FakeBot.cpp  moc_FightEngine.cpp  moc_InternalServer.cpp  moc_LocalClientHandler.cpp  moc_MapBasicMove.cpp  moc_MapController.cpp  moc_MapControllerMP.cpp  moc_MapVisualiser.cpp  moc_MapVisualiserPlayer.cpp  moc_MapVisualiserPlayerWithFight.cpp  moc_Map_loader.cpp  moc_NewGame.cpp  moc_NewProfile.cpp  moc_Options.cpp  moc_PlayerUpdater.cpp  moc_ProtocolParsing.cpp  moc_QFakeServer.cpp  moc_QFakeSocket.cpp  moc_SaveGameLabel.cpp  moc_mainwindow.cpp  (+11 more)
client/catchchallenger-single-server-build-Desktop-Debug/: Makefile  moc_Api_client_real.cpp  moc_Api_protocol.cpp  moc_BaseWindow.cpp  moc_Chat.cpp  moc_ConnectedSocket.cpp  moc_DatapackClientLoader.cpp  moc_FightEngine.cpp  moc_MapController.cpp  moc_MapControllerMP.cpp  moc_MapVisualiser.cpp  moc_MapVisualiserPlayer.cpp  moc_MapVisualiserPlayerWithFight.cpp  moc_Map_loader.cpp  moc_Options.cpp  moc_ProtocolParsing.cpp  moc_QFakeServer.cpp  moc_QFakeSocket.cpp  moc_mainwindow.cpp  qrc_client-resources-fight.cpp  qrc_client-resources-multi.cpp  qrc_client-resources-plant.cpp  ui_BaseWindow.h  ui_Chat.h  ui_mainwindow.h
client/catchchallengerclient/: catchchallengerclient.pro
client/cpu/: catchchallenger.pro  main.cpp  mainwindow.cpp  mainwindow.h
client/full/: AddServer.cpp  AddServer.h  catchchallenger-full.pro  catchchallenger-full.pro.user.2.7pre1  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  specific.pri
client/libcatchchallenger/: Api_client_real_main.cpp  Api_protocol.cpp  Api_protocol.h  Api_protocol.hpp  Api_protocol_loadchar.cpp  Api_protocol_message.cpp  Api_protocol_query.cpp  Api_protocol_reply.cpp  BlacklistPassword.hpp  CMakeLists.txt  ChatParsing.cpp  ChatParsing.hpp  ClientStructures.cpp  ClientStructures.hpp  ClientVariable.h  ClientVariable.hpp  DatapackChecksum.cpp  DatapackChecksum.h  DatapackChecksum.hpp  DatapackClientLoader.cpp  DatapackClientLoader.h  DatapackClientLoader.hpp  DisplayStructures.hpp  Map_client.cpp  Map_client.hpp  README.txt  TarDecode.hpp  ZstdDecode.cpp  ZstdDecode.hpp  catchchallengerclient.pro  lib.cmake  lib.pri  libheader.pri
client/libqtcatchchallenger/: Api_client_real.cpp  Api_client_real.hpp  Api_client_real_base.cpp  Api_client_real_main.cpp  Api_client_real_sub.cpp  Api_client_virtual.cpp  Api_client_virtual.hpp  Api_protocol_Qt.cpp  Api_protocol_Qt.hpp  Audio.cpp  Audio.hpp  CMakeLists.txt  CliClientOptions.cpp  CliClientOptions.hpp  ClientFightEngine.cpp  ClientFightEngine.hpp  ClientVariableAudio.hpp  ConnectedSocket.cpp  ConnectedSocket.hpp  DatapackChecksum.cpp  DisplayStructures.hpp  ExtraSocket.hpp  FeedNews.cpp  FeedNews.hpp  InternetUpdater.cpp  InternetUpdater.hpp  LanBroadcastWatcher.cpp  LanBroadcastWatcher.hpp  Language.cpp  Language.hpp  LocalListener.cpp  LocalListener.hpp  QInfiniteBuffer.cpp  QInfiniteBuffer.hpp  QZstdDecodeThread.cpp  QZstdDecodeThread.hpp  QtDatapackChecksum.cpp  QtDatapackChecksum.hpp  QtDatapackClientLoader.cpp  QtDatapackClientLoader.hpp  (+23 more)
client/multi-server/: AddServer.ui  MapController.cpp  main.cpp  (+7 more)
general/: CCCommon.cmake  CMakeLists.txt  DEFINES.md  dev.md  general.cmake  general.pri  libxxhash.pri  libzlib.cmake  libzstd.pri
server/: CLAUDE.md  CMakeLists.txt  CONFIG.md  EventDispatcher.cpp  EventDispatcher.h  MainWindow.cpp  MainWindow.h  MainWindow.hpp  MainWindow.ui  Makefile  NormalServer.cpp  NormalServer.h  NormalServer.hpp  NormalServerGlobal.cpp  NormalServerGlobal.h  NormalServerGlobal.hpp  ProcessControler.cpp  ProcessControler.h  ProcessControler.hpp  QSslServer.cpp  QSslServer.h  README.md  VariableServer.h  all-server-resources.qrc  catchchallenger-server-cli-epoll.pro  catchchallenger-server-cli.pro  catchchallenger-server-gui.pro  catchchallenger-server-normal.pri  catchchallenger-server-qt.pri  catchchallenger-server.cmake  catchchallenger-server.pri  catchchallenger-serverheader.pri  crash-catchchallenger-server-cli-epoll.php  dev.md  game-server-alone.pro  main-cli.cpp  main-epoll.cpp  main-epoll2.cpp  main-gui.cpp  main.cpp  (+9 more)
tools/: CMakeLists.txt  README.md
(+4359 files in other folders)
